--- a/home.html
+++ b/home.html
@@ -113,6 +113,7 @@ function filterFunction() {
         </a>
     </div>
 </div>
+    <P>Timothy got double pain</P>
   
     <div class="footer-top">
         <div class="container">
