--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 <div class="navbar navbar-default navbar-static-top">
 <div class="container-fluid">
 <div class="navbar-header">
-<img class="logo" src="images/Sync%20Development%20logo-ingekort.png"> 
+    <a href="home.html"><img class="logo" src="images/Sync%20Development%20logo-ingekort.png"></a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
