--- a/diensten.html
+++ b/diensten.html
@@ -26,7 +26,7 @@
 <div class="navbar navbar-default navbar-static-top">
 <div class="container-fluid">
 <div class="navbar-header">
-<img class="logo" src="images/Sync%20Development%20logo-ingekort.png">
+<a href="home.html"><img class="logo"src="images/Sync%20Development%20logo-ingekort.png"></a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
@@ -191,8 +191,47 @@ function filterFunction() {
     </div>
     </div>
 
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="images/Gallerij-1.jpg">
+      <img src="images/Gallerij-1.jpg" alt="Sync-Development" width="600" height="400">
+    </a>
+    <div class="desc">Website Sync-Development</div>
+  </div>
+</div>
 
-  
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="images/Gallerij-2.jpg">
+      <img src="images/Gallerij-2.jpg" alt="Kittenplace" width="600" height="400">
+    </a>
+    <div class="desc">Website Kittenplace</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="images/Gallerij-3.jpg">
+      <img src="images/Gallerij-3.jpg" alt="Rene tuinbeelden" width="600" height="400">
+    </a>
+    <div class="desc">Website Rene tuinbeelden</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="images/Gallerij-4.jpg">
+      <img src="images/Gallerij-4.jpg" alt="Golden Dragon" width="600" height="400">
+    </a>
+    <div class="desc">Website Golden Dragon</div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
+
+  <br>
+    
 <div class="footer-top">
         <div class="container">
             <p class="pull-left"></p>
