--- a/diensten.html
+++ b/diensten.html
@@ -249,9 +249,9 @@ function topFunction() {
                 <div class="col-md-4">
                     <h3> Location </h3>
                     <ul>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
+                        <li> <a href="#"> Straat: Anthonie van Leeuwenhoekweg 14 </a> </li>
+                        <li> <a href="#"> Postcode: 2408 NW </a> </li>
+                        <li> <a href="#"> Plaats: Alphen aan den Rijn </a> </li>
                         <li> <a href="#"> Lorem Ipsum </a> </li>
                     </ul>
                 </div>
