--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@ function filterFunction() {
       <p>Contact us and we'll get back to you within 24 hours.</p>
       <p><span class="glyphicon glyphicon-map-marker"></span> Alphen aan den rijn, 2407AE</p>
       <p><span class="glyphicon glyphicon-phone"></span> +0031 6 11129593</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Info@sync-development.nl</p> 
+      <p><span class="glyphicon glyphicon-envelope"></span><br>Info@sync-development.nl</p> 
     </div>
     <div class="col-sm-7">
       <div class="row">
