banner op diensten/ contactpage
gezorgt voor een banner op de pagina's: Diensten en Contact zodat men een mooier en overzichterijkere blik op de website krijgt

--- a/diensten.html
+++ b/diensten.html
@@ -86,11 +86,13 @@ function filterFunction() {
  <br>      
     
   <div id="wrapper2">
+      
+<p class="bg-primary"><strong>Development Pakketten</strong> <br> kies een pakket naar keuze</p>
+<br> <br> <br>
 <!-- Container (Pricing Section) -->
 <div id="pricing" class="container-fluid">
   <div class="text-center">
-    <h2>Development Pakketten</h2>
-    <h4>Kies een pakket dat bij uw situatie past!</h4>
+
   </div>
   <div class="row slideanim">
     <div id="kolom-1" class="col-sm-10 col-sm-push-1 col-md-4 col-md-push-0 col-xs-12">
