--- a/diensten.html
+++ b/diensten.html
@@ -89,6 +89,7 @@ function filterFunction() {
       
 <p class="bg-primary"><strong>Development Pakketten</strong> <br> kies een pakket naar keuze</p>
 <br> <br> <br>
+      
 <!-- Container (Pricing Section) -->
 <div id="pricing" class="container-fluid">
   <div class="text-center">
@@ -266,7 +267,7 @@ function topFunction() {
 
     <div class="footer-bottom">
         <div class="container">
-            <p class="pull-left"> Copyright © 2017, Sync-development</p>
+  <p class="copyright">Copyright © 2017 <br> Sync-development </p>
             <div class="pull-right">
                 <ul class="nav nav-pills payments">
                     <li><i class="fa fa-cc-visa"></i></li>
