--- a/contact.html
+++ b/contact.html
@@ -167,6 +167,7 @@ function topFunction() {
 }
 </script>
 
+
      
  
  <div class="footer-top">
@@ -220,7 +221,7 @@ function topFunction() {
 
     <div class="footer-bottom">
         <div class="container">
-            <p class="pull-left"> Copyright © 2017, Sync-development</p>
+  <p class="copyright">Copyright © 2017 <br> Sync-development </p>
             <div class="pull-right">
                 <ul class="nav nav-pills payments">
                     <li><i class="fa fa-cc-visa"></i></li>
