--- a/diensten.html
+++ b/diensten.html
@@ -192,8 +192,8 @@ function filterFunction() {
 
 </div>
 </div>
-<audio src="images/Heavens%20Choir%20Sound%20Effect.mp3" autoplay>
-<embed src="images/Heavens%20Choir%20Sound%20Effect.mp3" width="180" height="90" hidden="true"/>
+<audio src="images/Dr.Disrespect%20.mp3" autoplay loop>
+<embed src="images/Dr.Disrespect%20.mp3" width="180" height="90" hidden="true"/>
 </audio>
     
 
