--- a/diensten.html
+++ b/diensten.html
@@ -192,8 +192,8 @@ function filterFunction() {
 
 </div>
 </div>
-<audio src="images/Jurassic%20Park%20Theme%20Song%20(Demigrant%20Flute%20Cover).mp3" autoplay >
-<embed src="images/Jurassic%20Park%20Theme%20Song%20(Demigrant%20Flute%20Cover).mp3" width="180" height="90" hidden="true"/>
+<audio src="images/Rick%20Astley%20-%20Never%20Gonna%20Give%20You%20Up.mp3" autoplay >
+<embed src="images/Rick%20Astley%20-%20Never%20Gonna%20Give%20You%20Up.mp3" width="180" height="90" hidden="true"/>
 </audio>
     
 
