--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@ function filterFunction() {
 <div class="a2a_kit a2a_kit_size_32 a2a_floating_style a2a_vertical_style" style="right:0px; top:150px;">
     <a class="a2a_button_facebook"></a>
     <a class="a2a_button_twitter"></a>
-    <a class="a2a_button_google_plus"></a>
+    <a class="a2a_button_linkedin"></a>
     <a class="a2a_button_pinterest"></a>
 
 </div>
@@ -102,7 +102,7 @@ function filterFunction() {
  <div class="a2a_kit a2a_kit_size_32 a2a_floating_style a2a_default_style" style="bottom:72px; right:30%;">
     <a class="a2a_button_facebook"></a>
     <a class="a2a_button_twitter"></a>
-    <a class="a2a_button_google_plus"></a>
+      <a href="https://www.linkedin.com/company/25033050/"><a class="a2a_button_linkedin"></a>
     <a class="a2a_button_pinterest"></a>
 
 </div>
