Revert "Responsive contact"
This reverts commit 28c7261a3403d2067945488b9773ef5b26cd1028.

--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@ function filterFunction() {
 <p class="bg-primary"><strong></strong> <br></p>
 <br> <br> <br>
  
-<div id="main">
+<div class="main">
 		<div class="info">Neem contact met ons op</div>
 		<form action="mail_handler.php" method="post" name="form" class="form-box">
 			<label for="name">Naam</label><br>
