--- a/home.html
+++ b/home.html
@@ -191,8 +191,17 @@ function topFunction() {
 <div class="copyright">
   <div class="container">
     <div class="col-md-6">
-      <p>© 2016 - All Rights with prabuuideveloper</p>
+      <p>© 2017 - Sync-development</p>
     </div>
+       <div class="col-md-3 col-sm-6 footer-col">
+        <h6 class="heading7">Social Media</h6>
+        <ul class="footer-social1">
+          <li><i class="fa fa-linkedin social-icon linked-in" aria-hidden="true"></i></li>
+          <li><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
+          <li><i class="fa fa-twitter social-icon twitter" aria-hidden="true"></i></li>
+          <li><i class="fa fa-google-plus social-icon google" aria-hidden="true"></i></li>
+        </ul>
+      </div>
     <div class="col-md-6">
       <ul class="bottom_ul">
         <li><a href="#">prabuuideveloper.com</a></li>
