--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@ function filterFunction() {
 </div>
 </div> 
       <br>
-   <p class="bg-primary"><strong></strong> </p>    
+   <p class="bg-primary-2"><strong></strong> </p>    
     <div id="wrapper3">  
   
 <br> <br> <br><br>
