--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@ function filterFunction() {
   <h2 class="text-center">CONTACT</h2>
   <div class="row">
     <div class="col-sm-5">
-      <h2>Contact gegevens</h2>
+      <h3>Neem contact met ons op, wij reageren zo snel mogelijk!</h3>
       <p><span class="glyphicon glyphicon-map-marker" style="color: red;"></span> Antonie van leeuwenhoekweg 14, 2408AM, Alphen aan den rijn</p>
       <p><span class="glyphicon glyphicon-phone" style="color: #6da6ba;"></span> 0611129593</p>
       <p><span class="glyphicon glyphicon-envelope" style="color: #4431a7;"></span> info@sync-development.nl</p>
