link gemaakt met de action page

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,9 @@ function filterFunction() {
       <p><span class="glyphicon glyphicon-phone" style="color: #6da6ba;"></span> 0611129593</p>
       <p><span class="glyphicon glyphicon-envelope" style="color: #4431a7;"></span> info@sync-development.nl</p>
     </div>
-    <div class="col-sm-7 slideanim">
+    
+      <form action="mail_handler.php" method="post">
+      <div class="col-sm-7 slideanim">
       <div class="row">
         <div class="col-sm-6 form-group">
           <input class="form-control" id="name" name="name" placeholder="Naam" type="text" required>
@@ -124,7 +126,7 @@ function filterFunction() {
     </div>
   </div>
 </div>    
-     
+    </form>     
  
       
 
