--- a/diensten.html
+++ b/diensten.html
@@ -388,6 +388,7 @@ function topFunction() {
   </div>
 </footer>
 <!--footer start from here-->
+<div class="copyright2">
 <div class="copyright">
   <div class="container">
     <div class="col-md-6">
@@ -415,7 +416,7 @@ function topFunction() {
     </div>
   </div>
 </div>      
-
+</div>
 
 
 </body>  
