--- a/home.html
+++ b/home.html
@@ -190,8 +190,8 @@ function topFunction() {
 </footer>
 <!--footer start from here-->
 
-<div class="copyright" style="bottom:0px;">
-  <div class="container">
+<div class="copyright">
+  <div class="container"  >
     <div class="col-md-6">
       <p>© 2017 - Sync-development</p>
      <ul class="footer-social1">
