--- a/contact.html
+++ b/contact.html
@@ -117,10 +117,10 @@ function filterFunction() {
           <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
         </div>
       </div>
-      <textarea class="form-control" id="msg" name="msg" placeholder="Comment" rows="5"></textarea><br>
+      <textarea class="form-control" id="msg" name="msg" placeholder="Bericht" rows="5"></textarea><br>
       <div class="row">
         <div class="col-sm-12 form-group">
-          <button class="btn btn-default pull-right" type="submit">Send</button>
+          <button class="btn btn-default pull-right" type="submit">Verstuur</button>
         </div>
       </div>
     </div>
