--- a/home.html
+++ b/home.html
@@ -189,7 +189,7 @@ function topFunction() {
   </div>
 </footer>
 <!--footer start from here-->
-
+<div class="copyright3">
 <div class="copyright">
   <div class="container"  >
     <div class="col-md-6">
