wederom kleine aanpassing

--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@ function filterFunction() {
       <p><span class="glyphicon glyphicon-envelope" style="color: #4431a7;"></span> info@sync-development.nl</p>
     </div>
     
-      <form action="mail_handler.php" method="post">
+      <form method="POST" action="mail_handler.php">
       <div class="col-sm-7 slideanim">
       <div class="row">
         <div class="col-sm-6 form-group">
