--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,12 @@
 <div class="collapse navbar-collapse navbar-responsive-collapse">
 <ul class="nav navbar-nav navbar-right">
 <li>
-<a  href="home.html"><strong>Home</strong></a>
+<a  class="active2" href="home.html"><strong>Home</strong></a>
 </li>
 <li class="dropdown">
    
 <li>
- <a href="diensten.html"><strong>Diensten</strong></a>
+ <a class="active2" href="diensten.html"><strong>Diensten</strong></a>
 </li>
     
     
@@ -52,6 +52,7 @@
  </li>
 </ul>
 
+       <!--De class zort ervoor dat dit menu wordt gelinked met de animatie in de css-->
 </div>
 </div>
 </div>
