--- a/home.html
+++ b/home.html
@@ -38,6 +38,7 @@
 <a class="navbar-brand" href="#"></a>
 </div>
 
+
 <div class="collapse navbar-collapse navbar-responsive-collapse">
 <ul class="nav navbar-nav navbar-right">
 <li>
@@ -46,18 +47,19 @@
 <li class="dropdown">
    
 <li>
- <a href="diensten.html"><strong>Diensten</strong></a>
+ <a  class="active2" href="diensten.html"><strong>Diensten</strong></a>
 </li>
     
     
 <li>
-<a href="contact.html"><strong>Contact</strong></a>
+<a  class="active2" href="contact.html"><strong>Contact</strong></a>
  </li>
 </ul>
+   <!--De class zort ervoor dat dit menu wordt gelinked met de animatie in de css-->
+</div>
+</div>
+</div>
 
-</div>
-</div>
-</div>  
 <script>
 /* When the user clicks on the button,
 toggle between hiding and showing the dropdown content */
