--- a/contact.html
+++ b/contact.html
@@ -206,7 +206,7 @@ function topFunction() {
 <div class="copyright">
   <div class="container">
     <div class="col-md-6">
-      <p>© 2017 - Sync-development</p>
+      <p><img class="flag" src="images/netherlands-flag-round-icon-32.png">© 2017 - Sync-development</p>
      <ul class="footer-social1">
           <li><i class="fa fa-linkedin social-icon linked-in" aria-hidden="true"></i></li>
           <li><i class="fa fa-facebook social-icon facebook" aria-hidden="true"></i></li>
