--- a/contact.html
+++ b/contact.html
@@ -133,24 +133,21 @@ function filterFunction() {
 
   
  <br>   
- <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+<a href="javascript:" id="return-to-top"><i class="icon-chevron-up"><img class="scrollup" src="images/scroll%5B1%5D.png"> </i></a>
 <script>
-// When the user scrolls down 20px from the top of the document, show the button
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        document.getElementById("myBtn").style.display = "block";
+// When the user scrolls down 30px from the top of the document, show the button
+$(window).scroll(function() {
+    if ($(this).scrollTop() >= 10) {        // If page is scrolled more than 50px
+        $('#return-to-top').fadeIn(200);    // Fade in the arrow
     } else {
-        document.getElementById("myBtn").style.display = "none";
+        $('#return-to-top').fadeOut(200);   // Else fade out the arrow
     }
-}
-
-// When the user clicks on the button, scroll to the top of the document
-function topFunction() {
-    document.body.scrollTop = 0;
-    document.documentElement.scrollTop = 0;
-}
+});
+$('#return-to-top').click(function() {      // When arrow is clicked
+    $('body,html').animate({
+        scrollTop : 0                       // Scroll to top of body
+    }, 500);
+});
 </script>
 
 <hr>  
