--- a/diensten.html
+++ b/diensten.html
@@ -392,7 +392,7 @@ $('#return-to-top').click(function() {      // When arrow is clicked
 </footer>
 <!--footer start from here-->
 
-
+<div class="copyright2">
 <div class="copyright">
   <div class="container">
     <div class="col-md-6">
@@ -419,9 +419,9 @@ $('#return-to-top').click(function() {      // When arrow is clicked
       </ul>
     </div>
   </div>
-</div>      
+     
 </div>
-
+</div> 
 
 </body>  
 </html>
