--- a/contact.html
+++ b/contact.html
@@ -88,11 +88,13 @@ function filterFunction() {
 <script async src="https://static.addtoany.com/menu/page.js"></script>   
 </div>
 </div> 
- <br><br><br>
-
+      <br>
+   <p class="bg-primary-2"><strong></strong> </p>    
+    <div id="wrapper3">  
+  
+<br> <br> <br><br>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2449.297910034982!2d4.643224315610478!3d52.12890217289174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5dae9abea84bb%3A0x1d4e249081bd79a4!2sAntonie+van+Leeuwenhoekweg+14%2C+2408+AM+Alphen+aan+den+Rijn!5e0!3m2!1snl!2snl!4v1505201878783" frameborder="0" style="border:0" allowfullscreen></iframe>
- 
-<hr>
+    
 <div id="contact" class="container-fluid bg-grey">
   <h2 class="text-center">CONTACT</h2>
   <div class="row">
