menu mobile versie
De dropdown aangepast, ander logo, breedte en positionering van slider op homepagina aangepast

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,7 @@
 <div class="container-fluid">
 <div class="navbar-header">
 <a href="home.html"><img class="logo" src="images/Sync%20Development%20logo-ingekort.png"></a> 
+    <a href="home.html"><img class="logomobile" src="images/sync-icon.png"></a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
