--- a/home.html
+++ b/home.html
@@ -29,6 +29,7 @@
 <div class="navbar-header">
     <a href="home.html"><img class="logo" src="images/Sync%20Development%20logo-ingekort.png"></a>
     <a href="home.html"><img class="logomobile" src="images/sync-icon.png"></a>
+     <img class="flag2" src="images/netherlands-flag-round-icon-32.png">
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
