Submit button fixed contact form

--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@ function filterFunction() {
       <textarea class="form-control" id="msg" name="msg" placeholder="Bericht" rows="5"></textarea><br>
       <div class="row">
         <div class="col-sm-12 form-group">
-          <button class="btn btn-default pull-right" type="submit">Verstuur</button>
+         <button class="btn btn-default pull-right" id="submit" name="submit" type="submit">Verstuur</button>
         </div>
       </div>
     </div>
