--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@ function filterFunction() {
   
 <br> <br> <br>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2449.297910034982!2d4.643224315610478!3d52.12890217289174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5dae9abea84bb%3A0x1d4e249081bd79a4!2sAntonie+van+Leeuwenhoekweg+14%2C+2408+AM+Alphen+aan+den+Rijn!5e0!3m2!1snl!2snl!4v1505201878783" frameborder="0" style="border:0" allowfullscreen></iframe>
-<hr>    
+    
 <div id="contact" class="container-fluid bg-grey">
   <h2 class="text-center">CONTACT</h2>
   <div class="row">
@@ -126,12 +126,10 @@ function filterFunction() {
       </div>
     </div>
   </div>
-</div>    
+</div> 
+        </div>
     </form>     
  
-      
-
-  
  <br>   
 <a href="javascript:" id="return-to-top"><i class="icon-chevron-up"><img class="scrollup" src="images/scroll%5B1%5D.png"> </i></a>
 <script>
@@ -151,8 +149,41 @@ $('#return-to-top').click(function() {      // When arrow is clicked
 </script>
 
 <hr>  
+<div id="wrapper3">
+ <h2>What our customers say</h2>
+<div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
 
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+    <h4>"This company is the best. I am so happy with the result!"<br><span style="font-style:normal;">Michael Roe, Vice President, Comment Box</span></h4>
+    </div>
+    <div class="item">
+      <h4>"One word... WOW!!"<br><span style="font-style:normal;">John Doe, Salesman, Rep Inc</span></h4>
+    </div>
+    <div class="item">
+      <h4>"Could I... BE any more happy with this company?"<br><span style="font-style:normal;">Chandler Bing, Actor, FriendsAlot</span></h4>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>       
 </div>
+
      
 <link href="https://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css" rel="stylesheet">
 <!--footer start from here-->
