--- a/diensten.html
+++ b/diensten.html
@@ -448,7 +448,7 @@ $('#return-to-top').click(function() {      // When arrow is clicked
 <style>
 .bg-img1 {
     /* The image used */
-    background-image: url("../Sync-Development/images/Banner%202.jpg");
+    background-image: url("../images/Banner%202.jpg");
 
     /* Set a specific height */
     min-height: 500px; 
@@ -462,7 +462,7 @@ $('#return-to-top').click(function() {      // When arrow is clicked
 
 .bg-img2 {
     /* The image used */
-    background-image: url("../Sync-Development/images/Banner%204.jpg");
+    background-image: url("../images/Banner%204.jpg");
 
     /* Set a specific height */
     min-height: 500px; 
@@ -477,20 +477,20 @@ $('#return-to-top').click(function() {      // When arrow is clicked
 
 #kolom-1 {
     color: white;
-        background-image:url("../Sync-Development/images/Kolom.jpg");
+        background-image:url("../images/Kolom.jpg");
     background-size:cover;
     
 }
 
 #kolom-2 {
     color: white;
-    background-image:url("../Sync-Development/images/Kolom.jpg");
+    background-image:url("../images/Kolom.jpg");
     background-size:cover;
 }
 
 #kolom-3 {
     color:  white;
-    background-image:url("../Sync-Development/images/Kolom.jpg");
+    background-image:url("../images/Kolom.jpg");
     background-size:cover;
 }
     
