--- a/diensten.html
+++ b/diensten.html
@@ -349,10 +349,10 @@ function filterFunction() {
   <div class="container">
     <div class="row">
       <div class="col-md-3 col-sm-6 footer-col">
-        <div class="logofooter"> Logo</div>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-        <p><i class="fa fa-map-pin"></i> #228, Tiruvannamalai, Tamilnadu, India</p>
-        <p><i class="fa fa-phone"></i> Phone (India) : +91 9999 999 999</p>
+<div class="logofooter"> Contact </div>
+        <p>Wij zijn telefonisch te bereiken van ma t/m vr van 09:00 - 16:00.</p>
+        <p><i class="fa fa-map-pin"></i> Anthonie van Leeuwenhoekweg 14</p>
+        <p><i class="fa fa-phone"></i> Phone: 0653538815</p>
         <p><i class="fa fa-envelope"></i> E-mail : info@prabuuideveloper.com</p>
         
       </div>
@@ -390,7 +390,7 @@ function filterFunction() {
 </footer>
 <!--footer start from here-->
 
-
+    
 
 <div class="copyright2">
 <div class="copyright">
