--- a/home.html
+++ b/home.html
@@ -47,7 +47,10 @@
 <li>
  <a  class="active2" href="diensten.html"><strong>Diensten</strong></a>
 </li>
-    
+
+<li>
+<a  class="active2" href="Werkwijze.html"><strong>Werkwijze</strong></a>
+</li>
     
 <li>
 <a  class="active2" href="contact.html"><strong>Contact</strong></a>
