--- a/contact.html
+++ b/contact.html
@@ -139,6 +139,17 @@ function filterFunction() {
 
 
 <hr>  
+
+<marquee>
+   <strong> <span class="glyphicon glyphicon-chevron-left"></span>Mobiel: 06-53538815<span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="glyphicon glyphicon-chevron-left"></span>  E-mail : info@prabuuideveloper.com      <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="glyphicon glyphicon-chevron-left"></span> Locatie: Anthonie van Leeuwenhoekweg 14, Alphen aan de Rijn<span class="glyphicon glyphicon-chevron-right"></span></strong></marquee>
+
+
+
+
+
+
 <div id="wrapper3"></div>
 
      
