Inhoud pagina's toegevoegd

--- a/diensten.html
+++ b/diensten.html
@@ -94,7 +94,8 @@ function filterFunction() {
   <div id="wrapper2">
       <h2>Development Pakketten</h2>
       <hr>
-       <p>Kies hier een development pakket dat bij u past!</p>
+       <p>Bij Sync development werken wij met 3 standaard pakketten.<br> Deze pakketten brengen ieder hun voordeel voor een bepaalde situatie naar voren, zie ieder pakket dus voornamelijk als een bouwplan. 
+</p>
 
       
 
@@ -123,8 +124,9 @@ function filterFunction() {
           <h3>Het basispakket</h3>
         </div>
       </div>
-         <h2>Hello world</h2>
-        <p>hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello</p>
+         <h2>Basic Pakket</h2>
+        <p>Het basic pakket is een standaard pakket, wat voornamelijk bestemd is voor mensen die niet veel complexiteit in hun website verwerkt willen hebben. Hierbij richten wij ons op het laag houden van de prijs. 
+</p>
     </div>  
       <!--Deze kolommen veranderen van kleur door id="kolom"-->
     <div class="col-sm-10 col-sm-push-1 col-md-4 col-md-push-0 col-xs-12">
@@ -143,8 +145,9 @@ function filterFunction() {
           <h3>Het extra pakket</h3>
         </div>
       </div>
-        <h2>Hello world</h2>
-        <p>hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello</p>
+        <h2>Basic+ Pakkt</h2>
+        <p>Het basic+ pakket is vooral gericht op mensen die een complete website willen die voldoet aan de standaard van nu. Bij het basic+ pakket zorgen wij ervoor dat uw website meer dan klaar is voor de strijd, daarbij zorgen wij er ook nog eens voor dat de vindbaarheid van uw website een stuk beter wordt.
+</p>
     </div> 
     <div class="col-sm-10 col-sm-push-1 col-md-4 col-md-push-0 col-xs-12">
       <div class="panel panel-default text-center">
@@ -163,8 +166,9 @@ function filterFunction() {
         </div>
       </div>      
     </div>
-       <h2>Hello world</h2>
-        <p>hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello hello</p>
+       <h2>Premium Pakket</h2>
+        <p>Het premium pakket is bestemd voor een website die zowel complexiteit als functionaliteit nodig heeft, hierin maken wij gebruik van alle nieuwe technieken die op dit moment beschikbaar zijn. Daarnaast zorgen wij er ook voor dat uw website optimaal vindbaar, gestyled en beveiligd is.
+</p>
   </div>
       <br> 
       <br>
