--- a/Werkwijze.html
+++ b/Werkwijze.html
@@ -92,7 +92,7 @@ function filterFunction() {
   <div id="wrapper2">
       <h2>WERKWIJZE PAGINA</h2>
       <hr>
-       <p>Kies hier een development pakket dat bij u past!</p>
+       <p>Still in development!</p>
 
     </div>
 
