Content gewijzigd naar juist adres

--- a/contact.html
+++ b/contact.html
@@ -141,9 +141,9 @@ function filterFunction() {
 <hr>  
 
 <marquee>
-   <strong> <span class="glyphicon glyphicon-chevron-left"></span>Mobiel: 06-53538815<span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="glyphicon glyphicon-chevron-left"></span>  E-mail : info@prabuuideveloper.com      <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="glyphicon glyphicon-chevron-left"></span> Locatie: Anthonie van Leeuwenhoekweg 14,  2408AM, Alphen aan den rijn<span class="glyphicon glyphicon-chevron-right"></span></strong></marquee>
+   <strong> <span class="glyphicon glyphicon-chevron-left"></span>Mobiel: 06-11129593<span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="glyphicon glyphicon-chevron-left"></span>  E-mail: Info@sync-development.nl      <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="glyphicon glyphicon-chevron-left"></span> Locatie: Antonie van Leeuwenhoekweg 14,  2408AM, Alphen aan den rijn<span class="glyphicon glyphicon-chevron-right"></span></strong></marquee>
 
 
 
@@ -161,9 +161,9 @@ function filterFunction() {
       <div class="col-md-3 col-sm-6 footer-col">
         <div class="logofooter"> Contact </div>
         <p>Wij zijn telefonisch te bereiken van ma t/m vr van 09:00 - 16:00.</p>
-        <p><i class="fa fa-map-pin"></i> Anthonie van Leeuwenhoekweg 14</p>
-        <p><i class="fa fa-phone"></i> Phone: 0653538815</p>
-        <p><i class="fa fa-envelope"></i> E-mail : info@prabuuideveloper.com</p>
+        <p><i class="fa fa-map-pin"></i> Antonie van Leeuwenhoekweg 14</p>
+        <p><i class="fa fa-phone"></i> Mobiel: 0653538815</p>
+        <p><i class="fa fa-envelope"></i> E-mail: Info@sync-development.nl</p>
         
       </div>
       <div class="col-md-3 col-sm-6 footer-col">
@@ -234,12 +234,12 @@ $('#return-to-top').click(function() {      // When arrow is clicked
        
     <div class="col-md-6">
       <ul class="bottom_ul">
-        <li><a href="#">prabuuideveloper.com</a></li>
-        <li><a href="#">About us</a></li>
+        <li><a href="#">Info@sync-development.nl</a></li>
+        <li><a href="#">Over ons</a></li>
         <li><a href="#">Blog</a></li>
         <li><a href="#">Faq's</a></li>
-        <li><a href="#">Contact us</a></li>
-        <li><a href="#">Site Map</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Portfolio</a></li>
       </ul>
     </div>
   </div>
