Kleur aangepast van het font en h1

--- a/diensten.html
+++ b/diensten.html
@@ -155,7 +155,7 @@ function filterFunction() {
           <h3>Het extra pakket</h3>
         </div>
       </div>
-        <h2>Basic+ Pakkt</h2>
+        <h2>Basic+ Pakket</h2>
         <p>Het basic+ pakket is vooral gericht op mensen die een complete website willen die voldoet aan de standaard van nu. Bij het basic+ pakket zorgen wij ervoor dat uw website meer dan klaar is voor de strijd, daarbij zorgen wij er ook nog eens voor dat de vindbaarheid van uw website een stuk beter wordt.
 </p>
     </div> 
