--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,11 @@
 
 </head>
 <body>
+    
+<a href="home">Home</a>
+<a href="diensten">Diensten</a>
+<a href="contact">Contact</a>
+<a href="werkwijze">Werkwijze</a>
   
  <div id="wrapper">    
 
