--- a/home.html
+++ b/home.html
@@ -52,20 +52,20 @@ $(document).ready(function(){
 <div class="collapse navbar-collapse navbar-responsive-collapse">
 <ul class="nav navbar-nav navbar-right">
 <li>
-<a  class="active2" href="home"><strong>Home</strong></a>
+<a  class="active2" href="home.html"><strong>Home</strong></a>
 </li>
 <li class="dropdown">
    
 <li>
- <a  class="active2" href="diensten"><strong>Diensten</strong></a>
+ <a  class="active2" href="diensten.html"><strong>Diensten</strong></a>
 </li>
 
 <li>
-<a  class="active2" href="Werkwijze"><strong>Werkwijze</strong></a>
+<a  class="active2" href="Werkwijze.html"><strong>Werkwijze</strong></a>
 </li>
     
 <li>
-<a  class="active2" href="contact"><strong>Contact</strong></a>
+<a  class="active2" href="contact.html"><strong>Contact</strong></a>
  </li>
 </ul>
    <!--De class zort ervoor dat dit menu wordt gelinked met de animatie in de css-->
