--- a/diensten.html
+++ b/diensten.html
@@ -195,7 +195,7 @@ function filterFunction() {
   <br>
 <div id="wrapper2">
 
-      <h2>Galerij</h2>
+      <h2>Referenties</h2>
      <hr>
       <p>Templates van gemaakte websites door Sync Development</p>
      
