Pakket diensten veranderd en namen gewijzigd

--- a/diensten.html
+++ b/diensten.html
@@ -130,15 +130,15 @@ function filterFunction() {
           <h3>Het basispakket</h3>
         </div>
       </div>
-         <h2>Basic Pakket</h2>
-        <p>Het basic pakket is een standaard pakket, wat voornamelijk bestemd is voor mensen die niet veel complexiteit in hun website verwerkt willen hebben. Hierbij richten wij ons op het laag houden van de prijs. 
-</p>
+         <h2>Standaard diensten, Vanaf €399,- </h2>
+        <p> In het basispakket maken wij de website die u in gedachte heeft. </p>
+
     </div>  
       <!--Deze kolommen veranderen van kleur door id="kolom"-->
     <div class="col-sm-10 col-sm-push-1 col-md-4 col-md-push-0 col-xs-12">
       <div class="panel panel-default text-center">
         <div id="hoofd" class="panel-heading">
-        <h1>Basic+</h1>
+        <h1>+ Pakket</h1>
         </div>
         <div id="kolom-2" class="panel-body">
           <p><strong>&LT;Webhosting&GT;</strong> </p>
@@ -151,9 +151,9 @@ function filterFunction() {
           <h3>Het extra pakket</h3>
         </div>
       </div>
-        <h2>Basic+ Pakket</h2>
-        <p>Het basic+ pakket is vooral gericht op mensen die een complete website willen die voldoet aan de standaard van nu. Bij het basic+ pakket zorgen wij ervoor dat uw website meer dan klaar is voor de strijd, daarbij zorgen wij er ook nog eens voor dat de vindbaarheid van uw website een stuk beter wordt.
-</p>
+        <h2>Toevoeging op het Basic pakket</h2>
+        <p> Een toevoeging op het Basic pakket, hierbij optimaliseren wij uw website voor betere vindbaarheid (SEO). </p>
+
     </div> 
     <div class="col-sm-10 col-sm-push-1 col-md-4 col-md-push-0 col-xs-12">
       <div class="panel panel-default text-center">
@@ -165,16 +165,16 @@ function filterFunction() {
           <p><strong>&LT;Webdevelopment&GT;</strong></p>
           <p><strong>&LT;Domeinnaam&GT;</strong></p>
           <p><strong>&LT;SEO&GT;</strong></p>
-          <p><strong>&LT;Gratis stijling&GT;</strong></p>
+          <p><strong>&LT;Styling + Promotie &GT;</strong></p>
         </div>
         <div id="voet" class="panel-footer">
-          <h3>Het ultieme pakket</h3>
+          <h3>Het meest uitgebreide pakket</h3>
         </div>
       </div>      
     </div>
-       <h2>Premium Pakket</h2>
-        <p>Het premium pakket is bestemd voor een website die zowel complexiteit als functionaliteit nodig heeft, hierin maken wij gebruik van alle nieuwe technieken die op dit moment beschikbaar zijn. Daarnaast zorgen wij er ook voor dat uw website optimaal vindbaar, gestyled en beveiligd is.
-</p>
+       <h2>Het pakket waar alle diensten zijn inbegrepen</h2>
+        <p>Het premium pakket is ideaal voor iedereen. Alles wordt voor u geregeld, inclusief de styling en promotie. </p>
+
   </div>
       <br> 
       <br>
