--- a/home.html
+++ b/home.html
@@ -155,6 +155,11 @@ function filterFunction() {
     <div id="wrapper2">
     <div class="container">
     <div class="row">
+        
+    <h2>No nonsense</h2>
+    <hr>
+    <p>Wij snappen als geen ander dat een startende ondernemer niet naar 3 verschillende bedrijven toe wilt voor zijn website. Daarom maken wij het simpel voor u, en leveren alle diensten in 1 bedrijf, No nonsense.</p>
+<br><br><br>
  
       <h2>Het 3 in 1 pakket voor de startende ondernemer</h2>
       <hr>
