--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="UTF-8">
-<meta name="keywords" content="website, website maken, website development, sync, sync-development, goedkope website, goedkope websites, sites, SEO, vindbaarheid, betere vindbaarheid website, SEO, webhosting pakket">
+<meta name="keywords" content="website, website maken, development, developer,hoger in google, startende ondernemer, alphen aan den rijn, website development, sync, sync-development, goedkope website, goedkope websites, sites, SEO, vindbaarheid, betere vindbaarheid website, SEO, webhosting pakket">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
