--- a/diensten.html
+++ b/diensten.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet"  media="(max-width: 690px) and (orientation: portrait)" href="mobile.css">
 <link rel="stylesheet" media="(max-width: 750px) and (orientation: landscape)" href="css/mobile-landscape.css">
 <link rel="stylesheet" media="(min-width: 760px) and (orientation: portrait)" href="css/ipad.css">
-<link rel="stylesheet" media="(max-width: 1250px) and (orientation: landscape)" href="css/Ipad-landscape.css">
+<link rel="stylesheet" media="(max-width: 1370px) and (orientation: landscape)" href="css/Ipad-landscape.css">
 <link href="https://fonts.googleapis.com/css?family=Tauri" rel="stylesheet"> 
     
 </head>
@@ -168,7 +168,7 @@ function filterFunction() {
           <p><strong>&LT;Styling + Promotie&GT;</strong></p>
         </div>
         <div id="voet" class="panel-footer">
-          <h3>Het meest uitgebreide pakket</h3>
+          <h3>Het uitgebreide pakket</h3>
         </div>
       </div>      
   
