Footer info veranderd

--- a/contact.html
+++ b/contact.html
@@ -180,9 +180,9 @@ function filterFunction() {
     <div class="row">
       <div class="col-md-3 col-sm-6 footer-col">
         <div class="logofooter"> Contact </div>
-        <p>Wij zijn telefonisch te bereiken van ma t/m vr van 09:00 - 16:00.</p>
-        <p><i class="fa fa-map-pin"></i> Antonie van Leeuwenhoekweg 14</p>
-        <p><i class="fa fa-phone"></i> Mobiel: 0653538815</p>
+        <p>Wij zijn telefonisch te bereiken van ma t/m vr van 09:00 - 18:00.</p>
+        <p><i class="fa fa-map-pin"></i> Antonie van Leeuwenhoekweg 14, Alphen aan den rijn</p>
+        <p><i class="fa fa-phone"></i> Tel: 0611129593</p>
         <p><i class="fa fa-envelope"></i> E-mail: Info@sync-development.nl</p>
         
       </div>
