--- a/home.html
+++ b/home.html
@@ -275,7 +275,7 @@ function filterFunction() {
   <div class="container">
     <div class="row">
       <div class="col-md-3 col-sm-6 footer-col">
-        <div class="logofooter"> Contacd </div>
+        <div class="logofooter"> Contact </div>
         <p>Wij zijn telefonisch te bereiken van ma t/m vr van 09:00 - 18:00.</p>
         <p><i class="fa fa-map-pin"></i> Antonie van Leeuwenhoekweg 14, Alphen aan den rijn</p>
         <p><i class="fa fa-phone"></i> Tel: 0611129593</p>
