--- a/diensten.html
+++ b/diensten.html
@@ -110,7 +110,7 @@ function filterFunction() {
 <!-- Container (Pricing Section) -->
     
 <div class="container">
-    <div class="row">
+    <div class="row2">
         <div class="col-xs-12 col-md-3">
             <div class="panel panel-primary">
                 <div class="panel-heading">
