--- a/diensten.html
+++ b/diensten.html
@@ -154,7 +154,7 @@ function filterFunction() {
                     </table>
                 </div>
                 <div class="panel-footer">
-                    <a href="http://www.jquery2dotnet.com" class="btn btn-success" role="button">Meer info</a>
+                    <a href="meer-info.html" class="btn btn-success" role="button">Meer info</a>
                    </div>
             </div>
         </div>
@@ -201,7 +201,7 @@ function filterFunction() {
                     </table>
                 </div>
                 <div class="panel-footer">
-                    <a href="http://www.jquery2dotnet.com" class="btn btn-success" role="button">Meer info</a>
+                    <a href="meer-info.html" class="btn btn-success" role="button">Meer info</a>
                     </div>
             </div>
         </div>
@@ -245,7 +245,7 @@ function filterFunction() {
                     </table>
                 </div>
                 <div class="panel-footer">
-                    <a href="http://www.jquery2dotnet.com" class="btn btn-success" role="button">Meer info</a> </div>
+                    <a href="meer-info.html" class="btn btn-success" role="button">Meer info</a> </div>
             </div>
         </div>
     </div>
