--- a/home.html
+++ b/home.html
@@ -183,7 +183,7 @@ function filterFunction() {
           <img class="icon" src="images/Online%20marketing.png" width="50">
           <h3>Online marketing</h3>
           <hr>
-          <p>Een website die er gegarandeerd voor zorgt dat uw bedrijf de aandacht krijgt die het verdient, wie wil dat nou niet? Wij bij Sync development bieden daarom meerdere diensten aan die ervoor zorgen dat uw website meer bezoekers gaat krijgen en de gemiddelde duur van het bezoek omhoog gaat schroeven.    </p>
+          <p>Een website die er gegarandeerd voor zorgt dat uw bedrijf de aandacht krijgt die het verdient, wie wil dat nou niet? Wij bij Sync-development bieden daarom meerdere diensten aan die ervoor zorgen dat uw website meer bezoekers gaat krijgen en de gemiddelde duur van het bezoek omhoog gaat schroeven.    </p>
       </section>
         </div>
         </div>
@@ -245,9 +245,9 @@ function filterFunction() {
           <div class="container">
             <div class="row">
 
-               <h2>Sync Development-2</h2>
+               <h2>Sync-Development-2</h2>
                 <hr>
-                 <p> Sync development werkt met de meest recente technieken om uw website zo goed mogelijk gevonden te laten worden, als vakterm noemen wij dit SEO   (search engine optimization). Daarom bieden wij deze dienst standaard aan in 2 van de 3 pakketten. <br>
+                 <p> Sync-development werkt met de meest recente technieken om uw website zo goed mogelijk gevonden te laten worden, als vakterm noemen wij dit SEO   (search engine optimization). Daarom bieden wij deze dienst standaard aan in 2 van de 3 pakketten. <br>
                   Mocht u een bestaande website hebben waar u deze dienst op wilt laten uitvoeren dan is dit mogelijk voor een zeer scherpe prijs, omdat wij niet werken met een vanaf prijs wordt de exacte prijs pas later vastgesteld. 
                 </p>
                 
