--- a/diensten.html
+++ b/diensten.html
@@ -111,7 +111,7 @@ function filterFunction() {
     
 <div class="container">
     <div class="row2">
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h3 class="panel-title">
@@ -158,7 +158,7 @@ function filterFunction() {
                    </div>
             </div>
         </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="panel panel-success">
                 <div class="cnrflash">
                 </div>
@@ -205,7 +205,7 @@ function filterFunction() {
                     </div>
             </div>
         </div>
-        <div class="col-xs-6 col-md-3">
+        <div class="col-xs-12 col-sm-12 col-md-3">
             <div class="panel panel-info">
                 <div class="panel-heading">
                     <h3 class="panel-title">
