--- a/Werkwijze.html
+++ b/Werkwijze.html
@@ -102,7 +102,7 @@ function filterFunction() {
       <h2>Nieuwe website</h2>
       <hr>
       <p>
-          Wij bij Sync development willen op alle mogelijke manieren onze klanten tegemoet komen, daarom maken wij van tevoren duidelijke afspraken over het ontwikkelingsproces. Nu verloopt natuurlijk niet ieder proces hetzelfde, maar er is wel sprake van een basisprincipe dat altijd terugkomt. Hieronder ziet u hoe het bij ons in z’n werk gaat.<br><br>
+          Wij bij Sync-development willen op alle mogelijke manieren onze klanten tegemoet komen, daarom maken wij van tevoren duidelijke afspraken over het ontwikkelingsproces. Nu verloopt natuurlijk niet ieder proces hetzelfde, maar er is wel sprake van een basisprincipe dat altijd terugkomt. Hieronder ziet u hoe het bij ons in z’n werk gaat.<br><br>
           
         
       <section class="col-xs-6 col-sm-6 col-md-3 col-lg-3">
@@ -134,7 +134,7 @@ function filterFunction() {
       <br><br><br><br><br><br> <br><br><br><br><br>
       <h2>Bestaande website</h2>
       <hr>
-      <p>Heeft u een bestaande website die een update kan gebruiken of een website die een boost in de performance kan gebruiken? Zoek dan niet verder en vraag bij ons een offerte aan. Sync development biedt externe diensten aan zoals het onderhouden en het updaten van bestaande websites voor een scherpe prijs.
+      <p>Heeft u een bestaande website die een update kan gebruiken of een website die een boost in de performance kan gebruiken? Zoek dan niet verder en vraag bij ons een offerte aan. Sync-development biedt externe diensten aan zoals het onderhouden en het updaten van bestaande websites voor een scherpe prijs.
       </p>
       <br> 
   
@@ -159,7 +159,7 @@ function filterFunction() {
        <div id="wrapper2"> 
       <h2>Werkwijze</h2>
       <hr>
-       <p>Communicatie is zeer belangrijk, daarom werken wij met een model dat communicatie centraal zet. Eerst maken wij een afspraak waarin alle mogelijkheden worden doorgesproken, daarna wordt er door ons een voorbeeld gemaakt van hoe de website eruit zou kunnen zien d.m.v mock ups en bijbehorende documentatie, gevolgd door een tweede afspraak wat zowel telefonisch als op locatie kan. In deze tweede afspraak vragen wij voor feedback om de website 100% naar uw eisen te vormen. <br><br>
+       <p>Bij sync-development staat communicatie centraal, daarom werken wij met een model dat communicatie centraal zet. Eerst maken wij een afspraak waarin alle mogelijkheden worden doorgesproken, daarna wordt er door ons een voorbeeld gemaakt van hoe de website eruit zou kunnen zien d.m.v mock ups en bijbehorende documentatie, gevolgd door een tweede afspraak wat zowel telefonisch als op locatie kan. In deze tweede afspraak vragen wij voor feedback om de website 100% naar uw eisen te vormen. <br><br>
 
        gedurende het ontwikkelingsproces krijgt u volledige inzage, u weet precies waar wij op elk moment mee bezig zijn en kunt zo nodig een verandering doorspelen. Hiermee hopen wij een stukje service aan u te bieden en daarnaast een stuk efficiëntie voor ons te winnen. <br><br>
 
