--- a/contact.html
+++ b/contact.html
@@ -149,10 +149,10 @@ function filterFunction() {
 <div id="wrapper2">
           <div class="media">        
             <div class="media-body">
-              <h2>Over Sync Development</h2>
+              <h2>Over Sync-Development</h2>
               <hr>
-                <p>Sync development bestaat uit een team van drie enthousiasten startende ondernemers. Sinds 31 Augustus 2017 is ons bedrijf van start gegaan, echter werken wij al samen sinds Augustus 2016. 
-                Ondanks dat onze geschiedenis niet bijzonder ver terug gaat hebben wij in een zeer korte tijd een hoop ervaring opgedaan. Daarom kunnen wij met    zekerheid zeggen dat Sync development klaar is voor het echte werk.
+                <p>Sync-development bestaat uit een team van drie enthousiasten startende ondernemers. Sinds 31 Augustus 2017 is ons bedrijf van start gegaan, echter werken wij al samen sinds Augustus 2016. 
+                Ondanks dat onze geschiedenis niet bijzonder ver terug gaat hebben wij in een zeer korte tijd een hoop ervaring opgedaan. Daarom kunnen wij met zekerheid zeggen dat Sync-development klaar is voor het echte werk.
                 wij zijn van mening dat een goede website voor iedereen haalbaar moet zijn ongeacht het budget, wij werken daarom ook niet met een vanaf prijs! Wij staan overal voor open, u bedenkt het en wij realiseren het.
                </p>        
            </div>
