--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,8 @@
     <a href="home.html"><img class="logo" src="images/Sync%20Development%20logo-ingekort.png"></a>
     <a href="home.html"><img class="logomobile" src="images/sync-icon.png"></a>
 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-<div id="nav-icon1">
+<div id="nav-icon3">
+  <span></span>
   <span></span>
   <span></span>
   <span></span>
@@ -39,7 +40,7 @@
 </button>
 <script>
 $(document).ready(function(){
-	$('#nav-icon1').click(function(){
+	$('#nav-icon1,#nav-icon2,#nav-icon3,#nav-icon4').click(function(){
 		$(this).toggleClass('open');
 	});
 });
