pakketten ipad goed gepositioneerd

--- a/diensten.html
+++ b/diensten.html
@@ -516,8 +516,10 @@ $('#return-to-top').click(function() {      // When arrow is clicked
   </div>
   <div>
 </div>
-
-
+    </div>
+    </div>
+    
+    
 </body> 
 </html>
 
