--- a/diensten.html
+++ b/diensten.html
@@ -121,7 +121,7 @@ function filterFunction() {
                 <div class="panel-body">
                     <div class="the-price">
                         <h1>
-                            €399</h1>
+                           Vanaf €399</h1>
            
                     </div>
                     <table class="table">
@@ -170,7 +170,7 @@ function filterFunction() {
                 <div class="panel-body">
                     <div class="the-price">
                         <h1>
-                            €599</h1>
+                           Vanaf €599</h1>
             
                     </div>
                     <table class="table">
@@ -215,7 +215,7 @@ function filterFunction() {
                 <div class="panel-body">
                     <div class="the-price">
                         <h1>
-                        €799</h1>
+                        Vanaf €799</h1>
                     </div>
                     <table class="table">
                         <tr>
