Marquee tekst gewijzigd

--- a/contact.html
+++ b/contact.html
@@ -162,9 +162,9 @@ function filterFunction() {
  
 
 <marquee>
-   <strong> <span class="glyphicon glyphicon-chevron-left"></span>Mobiel: 06-11129593<span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="glyphicon glyphicon-chevron-left"></span>  E-mail: Info@sync-development.nl      <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="glyphicon glyphicon-chevron-left"></span> Locatie: Antonie van Leeuwenhoekweg 14,  2408AM, Alphen aan den rijn<span class="glyphicon glyphicon-chevron-right"></span></strong></marquee>
+   <strong> <span class="glyphicon glyphicon-chevron-left"></span>Alle websites die wij leveren zijn standaard geschikt voor ieder device!<span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="glyphicon glyphicon-chevron-left"></span> Volg onze Facebook pagina voor leuke acties<span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="glyphicon glyphicon-chevron-left"></span>Perfecte websites vanaf €399,-!<span class="glyphicon glyphicon-chevron-right"></span></strong></marquee>
 
 
 
