kleine toevoeging marquee contact

--- a/contact.html
+++ b/contact.html
@@ -162,9 +162,12 @@ function filterFunction() {
  
 
 <marquee>
-   <strong> <span class="glyphicon glyphicon-chevron-left"></span>Alle websites die wij leveren zijn standaard geschikt voor ieder device!<span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="glyphicon glyphicon-chevron-left"></span> Volg onze Facebook pagina voor leuke acties<span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="glyphicon glyphicon-chevron-left"></span>Perfecte websites vanaf €399,-!<span class="glyphicon glyphicon-chevron-right"></span></strong></marquee>
+<strong> <span class="glyphicon glyphicon-chevron-left"></span>Alle websites die wij leveren zijn standaard geschikt voor ieder device!<span class="glyphicon glyphicon-chevron-right"></span>
+<span class="glyphicon glyphicon-chevron-left"></span> Volg onze Facebook pagina voor leuke acties<span class="glyphicon glyphicon-chevron-right"></span>
+<span class="glyphicon glyphicon-chevron-left"></span>Perfecte websites vanaf €399,-!<span class="glyphicon glyphicon-chevron-right"></span>
+<span class="glyphicon glyphicon-chevron-left"></span>Wij leveren ook extra diensten voor een zeer scherp tarief, bekijk onze voorwaarden<span class="glyphicon glyphicon-chevron-right"></span></strong>
+
+</marquee>
 
 
 
