E-mail aangepast in footer, en aangepast in de mail handler

--- a/diensten.html
+++ b/diensten.html
@@ -431,7 +431,7 @@ function filterFunction() {
         <p>Wij zijn telefonisch te bereiken van ma t/m vr van 09:00 - 18:00.</p>
         <p><i class="fa fa-map-pin"></i> Antonie van Leeuwenhoekweg 14, Alphen aan den rijn</p>
         <p><i class="fa fa-phone"></i> Tel: 0611129593</p>
-        <p><i class="fa fa-envelope"></i> E-mail : info@sync-development.nl</p>
+        <p><i class="fa fa-envelope"></i> E-mail: infosyncdevelopment@gmail.com</p>
         
       </div>
       <div class="col-md-3 col-sm-6 footer-col">
