--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@ function filterFunction() {
       <h2>Contact gegevens</h2>
       <p><span class="glyphicon glyphicon-map-marker" style="color: red;"></span> Antonie van leeuwenhoekweg 14, 2408AM, Alphen aan den rijn</p>
       <p><span class="glyphicon glyphicon-phone" style="color: #6da6ba;"></span> 0611129593</p>
-      <p><span class="glyphicon glyphicon-envelope" style="color: #4431a7;"></span> info@sync-development.nl</p>
+      <p><span class="glyphicon glyphicon-envelope" style="color: #4431a7;"></span> infosyncdevelopment@gmail.com</p>
     </div>
     
       <form method="POST" action="mail_handler.php">
