Href toegevoegd en werkwijze ipad responsive

--- a/home.html
+++ b/home.html
@@ -254,7 +254,7 @@ function filterFunction() {
 
                 
       <section class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-            <a href="diensten.html">
+            <a href="diensten.html#Pakketten">
             <img border="0" alt="Pakketten" src="images/Doos.png" width="80" height="80"></a>
            <h3>De pakketten</h3>
           <P>Een pakket dat zich aanpast aan uw situatie is ideaal. Sync development werkt met 3 standaard pakketten die voor iedereen toepasbaar zijn. Klik op het icoon “De pakketten” voor meer informatie. </P>
@@ -262,7 +262,7 @@ function filterFunction() {
       </section>
                 
       <section class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-           <a href="Werkwijze.html">
+            <a href="Werkwijze.html#werkwijze">
            <img border="0" alt="Werkwijze" src="images/Werk.png" width="80" height="80"></a>
            <h3>De Werkwijze</h3>
           <p>Het ontwikkelen van een website doen wij in vier eenvoudige stappen, klik op het icoon “De werkwijze” voor meer informatie. </p>
