--- a/diensten.html
+++ b/diensten.html
@@ -97,7 +97,7 @@ function filterFunction() {
     
     <div class="bg-img1"></div>
 
-    
+   <a name="Pakketten"></a> 
   <div id="wrapper2">
       <h2>Development Pakketten</h2>
       <hr>
